--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -67,7 +67,7 @@ install: install-headers install-kernel
 
 install-headers:
 	mkdir -p $(DESTDIR)$(INCLUDEDIR)
-	cp -RTv include $(DESTDIR)$(INCLUDEDIR)
+	cp -Rv include/* $(DESTDIR)$(INCLUDEDIR)
 
 install-kernel: myos.kernel
 	mkdir -p $(DESTDIR)$(BOOTDIR)
