Fixed terminal new line behavior, going to go with a flat protected mode because segmentation is apparently bad and passe, and the idt/idtr now gets loaded without any issues, but does it work?

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,5 +7,9 @@ KERNEL_ARCH_OBJS:=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/gdt.o \
+$(ARCHDIR)/idt.o \
+$(ARCHDIR)/isr_handler.o \
+$(ARCHDIR)/boot_idt.o \
+$(ARCHDIR)/boot_isr_handler.o \
 $(ARCHDIR)/boot_gdt.o \
 
