Well, ISRs and IRQs don't work.  This code does not compile as is - throws panics when interrupts happen.

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -9,7 +9,9 @@ $(ARCHDIR)/tty.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/idt.o \
 $(ARCHDIR)/isr_handler.o \
+$(ARCHDIR)/irq_handler.o \
 $(ARCHDIR)/boot_idt.o \
 $(ARCHDIR)/boot_isr_handler.o \
+$(ARCHDIR)/boot_irq_handler.o \
 $(ARCHDIR)/boot_gdt.o \
 
