--- a/libc/Makefile
+++ b/libc/Makefile
@@ -37,6 +37,7 @@ string/memcpy.o \
 string/memmove.o \
 string/memset.o \
 string/strlen.o \
+system/port.o \
 
 HOSTEDOBJS:=\
 $(ARCH_HOSTEDOBJS) \
