Added IRQs and a PIC for remapping IRQ offsets and clearing hardware interrupts.

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -12,6 +12,7 @@ $(ARCHDIR)/boot_idt.o \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/idt.o \
+$(ARCHDIR)/pic.o \
 $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_handler.o \
 
