Improving our makefiles to better pick up new files without having to manually update the makefiles to build them

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -3,17 +3,18 @@ KERNEL_ARCH_CPPFLAGS:=
 KERNEL_ARCH_LDFLAGS:=
 KERNEL_ARCH_LIBS:=
 
-KERNEL_ARCH_OBJS:=\
-$(ARCHDIR)/boot.o \
-$(ARCHDIR)/boot_gdt.o \
-$(ARCHDIR)/boot_isr_handler.o \
-$(ARCHDIR)/boot_irq_handler.o \
-$(ARCHDIR)/boot_idt.o \
-$(ARCHDIR)/tty.o \
-$(ARCHDIR)/gdt.o \
-$(ARCHDIR)/idt.o \
-$(ARCHDIR)/pic.o \
-$(ARCHDIR)/isr_handler.o \
-$(ARCHDIR)/irq_handler.o \
-$(ARCHDIR)/keyboard.o \
+# we have files that are arch specific that we want to ignore
+# because they're explicitly built in our makefile.
+ARCH_FILES_TO_IGNORE:= \
+"crtn.s" \
+"crti.s" \
+IGNORE_FILES_EXPRESSION:=$(foreach file,$(ARCH_FILES_TO_IGNORE),-and ! -name $(file))
+
+# here we find our .s and .c files, excluding the ones listed above,
+# we change their extension and pass them back to make with the .o extension.
+KERNEL_ARCH_C_FILES:=$(shell find $(ARCHDIR) -name "*.c")
+KERNEL_ARCH_S_FILES:=$(shell find $(ARCHDIR) -name "*.s" $(IGNORE_FILES_EXPRESSION))
+KERNEL_ARCH_OBJS:= \
+$(patsubst %.s,%.o,$(KERNEL_ARCH_S_FILES)) \
+$(patsubst %.c,%.o,$(KERNEL_ARCH_C_FILES)) 
 
