Organized kernel code into folder structures, modified kernel and libc makefiles to dynamically pick up .c/.s files

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -30,10 +30,10 @@ OBJS:=\
 $(KERNEL_ARCH_OBJS) \
 kernel/kernel.o \
 
-CRTI_OBJ:=$(ARCHDIR)/crti.o
+CRTI_OBJ:=$(ARCHDIR)/boot/crti.o
 CRTBEGIN_OBJ:=$(shell $(CC) $(CFLAGS) $(LDFLAGS) -print-file-name=crtbegin.o)
 CRTEND_OBJ:=$(shell $(CC) $(CFLAGS) $(LDFLAGS) -print-file-name=crtend.o)
-CRTN_OBJ:=$(ARCHDIR)/crtn.o
+CRTN_OBJ:=$(ARCHDIR)/boot/crtn.o
 
 ALL_OUR_OBJS:=\
 $(CRTI_OBJ) \
@@ -48,6 +48,9 @@ $(CRTEND_OBJ) \
 $(CRTN_OBJ) \
 
 all: myos.kernel
+
+print-%: 
+	@echo $* = $($*)
 
 .PHONY: all clean install install-headers install-kernel
 
