--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,7 +7,8 @@ KERNEL_ARCH_LIBS:=
 # because they're explicitly built in our makefile.
 ARCH_FILES_TO_IGNORE:= \
 "crtn.s" \
-"crti.s" \
+"crti.s" 
+
 IGNORE_FILES_EXPRESSION:=$(foreach file,$(ARCH_FILES_TO_IGNORE),-and ! -name $(file))
 
 # here we find our .s and .c files, excluding the ones listed above,
