--- a/libc/Makefile
+++ b/libc/Makefile
@@ -26,18 +26,10 @@ CPPFLAGS:=$(CPPFLAGS) $(ARCH_CPPFLAGS)
 LIBK_CFLAGS:=$(LIBK_CFLAGS) $(KERNEL_ARCH_CFLAGS)
 LIBK_CPPFLAGS:=$(LIBK_CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
 
+C_FILES=$(shell find . -type f -name "*.c")
 FREEOBJS:=\
 $(ARCH_FREEOBJS) \
-stdio/printf.o \
-stdio/putchar.o \
-stdio/puts.o \
-stdlib/abort.o \
-string/memcmp.o \
-string/memcpy.o \
-string/memmove.o \
-string/memset.o \
-string/strlen.o \
-system/port.o \
+$(patsubst %.c,%.o,$(C_FILES)) \
 
 HOSTEDOBJS:=\
 $(ARCH_HOSTEDOBJS) \
