Playing around some more with CMake - trying to port over existing Makefile functionality into CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,30 +22,37 @@ FUNCTION(REMOVE_FILES_WITH_PATTERN FILE_LIST FILE_PATTERN VAR_NAME)
 	SET(${VAR_NAME} ${FILE_LIST} PARENT_SCOPE)
 ENDFUNCTION(REMOVE_FILES_WITH_PATTERN)
 
+FUNCTION(ARCH_FROM_HOST HOST)
+	set(RETURN "${HOST}")
+	if ("${HOST}" MATCHES "i[0-9]+86-.*")
+		set(RETURN "i386")
+	endif("${HOST}" MATCHES "i[0-9]+86-.*")
+	set(ARCH "${RETURN}" PARENT_SCOPE)
+ENDFUNCTION(ARCH_FROM_HOST)
+
+FUNCTION(DEFINE_TOOLCHAIN_FROM_HOST HOST)
+	set(CMAKE_C_COMPILER "${HOST}-gcc" PARENT_SCOPE)
+	set(CMAKE_AR "${HOST}-ar" PARENT_SCOPE)
+	set(CMAKE_ASM-ATT_COMPILER "${HOST}-as" PARENT_SCOPE)
+ENDFUNCTION(DEFINE_TOOLCHAIN_FROM_HOST)
+
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
+
+# define our default host and arch
+set(HOST "i686-elf")
+ARCH_FROM_HOST(${HOST})
+
+# define CC, AR, AS executables
+DEFINE_TOOLCHAIN_FROM_HOST(${HOST})
+
+set(GENERAL_C_FLAGS "--sysroot=${CMAKE_CURRENT_SOURCE_DIR}/sysroot -O2 -g")
+set(GENERAL_CPP_FLAGS "")
+set(GENERAL_LD_FLAGS "")
+set(GENERAL_LIBS "")
+set(ROOT_PREFIX "/usr/local")
 
 # enable at&t assembly support
 ENABLE_LANGUAGE(ASM-ATT)
-
-#set c fkags
-#CMAKE_C_FLAGS
-
-#setting assembly build options
-#CMAKE_ASM-ATT_COMPILE_OBJECT
-
-#setting linker flags
-#SET_TARGET_FLAGS(target PROPERTIES LINK_FLAGS "flags")
-
-# C flags export CFLAGS='-O2 -g'
-# CPP flags export CPPFLAGS=''
-
-
- 
-SET(CMAKE_ASM-ATT_COMPILE_OBJECT 
-  "<CMAKE_ASM-ATT_COMPILER> ${ISA_ASM_FLAGS} ${PLATFORM_ASM_FLAGS} -o <OBJECT> <SOURCE>")
-SET(CMAKE_C_FLAGS "${ISA_C_FLAGS} ${PLATFORM_C_FLAGS}")
-SET_TARGET_PROPERTIES(kernel PROPERTIES LINK_FLAGS 
-  "-T ${PLATFORM_LAYOUT} -N ${ISA_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS}")
 
 # build libc first - kernel depends on it
 ADD_SUBDIRECTORY(libc)
