more work trying to get this cmake thing working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,10 @@ FUNCTION(LOAD_PROFILE PLATFORM)
 	MESSAGE(STATUS "Finding all platform specific sources")
 	FILE(GLOB_RECURSE PLATFORM_SRCS "arch/${PLATFORM}/**/*.c" "arch/${PLATFORM}/**/*.s")
 	MESSAGE(STATUS ${PLATFORM_SRCS})
+
 	MESSAGE(STATUS "Including platform specific flags")
 	INCLUDE("arch/${PLATFORM}/flags.cmake")
   	SET(PLATFORM_SRCS ${PLATFORM_SRCS} PARENT_SCOPE)
-  	SET(PLATFORM_LAYOUT "${ISA}/${PLATFORM}/layout.ld" PARENT_SCOPE)
-  	SET(PLATFORM_C_FLAGS {PLATFORM_C_FLAGS} PARENT_SCOPE)
-  	SET(PLATFORM_ASM_FLAGS ${PLATFORM_ASM_FLAGS} PARENT_SCOPE)
 ENDFUNCTION(LOAD_PROFILE)
 
 FUNCTION(REMOVE_FILES_WITH_PATTERN FILE_LIST FILE_PATTERN VAR_NAME)
@@ -31,9 +29,11 @@ FUNCTION(ARCH_FROM_HOST HOST)
 ENDFUNCTION(ARCH_FROM_HOST)
 
 FUNCTION(DEFINE_TOOLCHAIN_FROM_HOST HOST)
+	#apparently sysroot is not a flag - it needs to be passed right next to the invocation of gcc
 	set(CMAKE_C_COMPILER "${HOST}-gcc" PARENT_SCOPE)
 	set(CMAKE_AR "${HOST}-ar" PARENT_SCOPE)
 	set(CMAKE_ASM-ATT_COMPILER "${HOST}-as" PARENT_SCOPE)
+	SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "" PARENT_SCOPE)
 ENDFUNCTION(DEFINE_TOOLCHAIN_FROM_HOST)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
@@ -45,11 +45,17 @@ ARCH_FROM_HOST(${HOST})
 # define CC, AR, AS executables
 DEFINE_TOOLCHAIN_FROM_HOST(${HOST})
 
-set(GENERAL_C_FLAGS "--sysroot=${CMAKE_CURRENT_SOURCE_DIR}/sysroot -O2 -g")
+# define our directories relative to the sysroot (which should be ./sysroot)
+set(BOOT_DIR "/boot")
+set(USER_DIR "/usr")
+set(LIB_DIR "${USER_DIR}/lib")
+set(INCLUDE_DIR "${USER_DIR}/include")
+
+# define our general flags for linking, loading, preprocessing and compiling
+set(GENERAL_C_FLAGS "--sysroot=${CMAKE_CURRENT_SOURCE_DIR}/sysroot -isystem=${INCLUDE_DIR} -O2 -g")
 set(GENERAL_CPP_FLAGS "")
 set(GENERAL_LD_FLAGS "")
 set(GENERAL_LIBS "")
-set(ROOT_PREFIX "/usr/local")
 
 # enable at&t assembly support
 ENABLE_LANGUAGE(ASM-ATT)
